--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.44.2",
+    "recorder-core": "^1.2.23070100",
     "recordrtc": "^5.6.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
