--- a/package.json
+++ b/package.json
@@ -54,19 +54,27 @@
     "eslint-config-next": "13.4.9",
     "framer-motion": "^10.12.18",
     "lucide-react": "^0.258.0",
+    "mermaid": "^10.2.4",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.44.2",
+    "react-markdown": "^8.0.7",
     "react-use": "^17.4.0",
     "recorder-core": "^1.2.23070100",
     "recordrtc": "^5.6.2",
+    "rehype-highlight": "^6.0.0",
+    "rehype-katex": "^6.0.3",
+    "remark-breaks": "^3.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "use-debounce": "^9.0.4",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
